--- a/src/main/resources/templates/zhxw.html
+++ b/src/main/resources/templates/zhxw.html
@@ -3,17 +3,17 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head id="Head1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script language="javascript" type="text/javascript" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/NetBank.js.下载"></script>
+    <script language="javascript" type="text/javascript" th:src="@{../Scripts/NetBank.js}"></script>
 
-    <script language="javascript" type="text/javascript" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/Common.js.下载"></script>
+    <script language="javascript" type="text/javascript" th:src="@{../Scripts/Common.js}"></script>
     <link rel="Shortcut Icon" href="http://www.cmbchina.com/cmb.ico">
     <link rel="Bookmark" href="http://www.cmbchina.com/cmb.ico">
     <link rel="apple-touch-icon" sizes="72x72" href="http://www.cmbchina.com/touch-icon-ipad.png">
-    <link href="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/header.css" rel="stylesheet" type="text/css">
-    <link href="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/footer.css" rel="stylesheet" type="text/css">
-    <link href="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/common.css" rel="stylesheet" type="text/css">
-    <link href="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/cmbinfo.css" rel="Stylesheet" type="text/css">
-    <script src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/sdc_cmb.js.下载"></script></head>
+    <link th:href="@{../Styles/header.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{../Styles/footer.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{../Styles/common.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{../Styles/cmbinfo.css}" rel="Stylesheet" type="text/css">
+    <script th:src="@{../scriipts/sdc_cmb.js}"></script></head>
 <body style="background: url(&quot;/images/bg.gif&quot;) center top no-repeat rgb(255, 255, 255);">
 <form method="post" action="http://www.cmbchina.com/cmbinfo/news/newsinfo.aspx?guid=87237174-c657-434c-9417-dd34cd025f80" id="form1">
     <div class="aspNetHidden">
@@ -74,7 +74,7 @@
                 </td>
                 <td width="65">
                     <div id="maplink" class="map_link" onmouseover="showNavList(this)" onmouseout="hideNavList()" cname="顶部导航" oname="网站导航" otype="文字链接">网站导航<span style="line-height: 20px;
-                        height: 20px;"><img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/arrow_01.gif" width="8" height="4" border="0" align="middle"></span></div>
+                        height: 20px;"><img th:src="@{../images/arrow_01.gif}" width="8" height="4" border="0" align="middle"></span></div>
                 </td>
             </tr>
             </tbody></table>
@@ -167,9 +167,9 @@
 
 
 
-    <script language="javascript" src="/Scripts/json2.min.js" type="text/javascript"></script><![endif]-->
-    <script language="javascript" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/personalreco.js.下载" type="text/javascript"></script>
-    <script src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/cmbsearch.js.下载" type="text/javascript" charset="gb2312"></script>
+    <script language="javascript" th:src="@{../Scripts/json2.min.js}" type="text/javascript"></script><![endif]-->
+    <script language="javascript"th:src="@{../Scripts/personalreco.js}" type="text/javascript"></script>
+    <script th:src="@{../Scripts/cmbsearch.js}" type="text/javascript" charset="gb2312"></script>
 
     <table cellspacing="0" align="center" class="FrameTable">
         <tbody><tr>
@@ -323,7 +323,7 @@
             </div>
             <div class="main_online">
                 <a href="http://www.cmbchina.com/CustomerService/Default.aspx" target="_blank">
-                    <img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/main_95555.gif" border="0"></a></div>
+                    <img th:src="@{../images/main_95555.gif}" border="0"></a></div>
         </div>
         <div class="submenubg" id="subMenuItems" onmouseout="HideSubMenu(event, this)">
             <div class="sub_menu" id="sub_menu_1" style="display: none;">
@@ -494,47 +494,16 @@
 
 
     <div id="container">
-        <div id="column_left" style="min-height: 741px;">
-
-            <div class="NavLinkHeader">
-                <span>招商银行简介</span></div>
-            <div class="NavLinkContent">
-
-                <div class="page">
-                <span class="txtspan"><a title="招商银行简介" cname="招行简介左边菜单--cmbinfo" oname="招商银行简介" otype="文字链接" href="http://www.cmbchina.com/CmbInfo/aboutcmb/default.aspx?guid=d4f2fba8-081e-4c8d-b973-17694f836c0c">
-                    招商银行简介
-                </a></span>
-                </div>
-
-                <div class="page">
-                <span class="txtspan"><a title="领导层" cname="招行简介左边菜单--cmbinfo" oname="领导层" otype="文字链接" href="http://www.cmbchina.com/CmbInfo/aboutcmb/default.aspx?guid=07ed8ee3-b32b-4fdc-8978-7db21dca1ea3">
-                    领导层
-                </a></span>
-                </div>
-
-                <div class="page">
-                <span class="txtspan"><a title="社会责任" cname="招行简介左边菜单--cmbinfo" oname="社会责任" otype="文字链接" href="http://gongyi.cmbchina.com/qyzr/">
-                    社会责任
-                </a></span>
-                </div>
-
-                <div class="page">
-                <span class="txtspan"><a title="联系我们" cname="招行简介左边菜单--cmbinfo" oname="联系我们" otype="文字链接" href="http://www.cmbchina.com/CmbInfo/aboutcmb/default.aspx?guid=3def8278-f486-42ca-bb50-e3d914c0a5f9">
-                    联系我们
-                </a></span>
-                </div>
-
-                <div style="width:209px; border-top:1px solid #cccccc;"></div>
-            </div>
-
-
-
-        </div>
         <div id="column_main">
             <div class="location">
 
-                <div id="NavigationLinkDiv" style="width:; height:28px; border:1px solid #cccccc;background-color:#F1F1F1; line-height:28px; color:#696969">
-                    &nbsp; &nbsp;当前位置：&nbsp; <a id="content_NavigationLink1_main" href="http://www.cmbchina.com/">招商银行</a>  &gt;  <a id="content_NavigationLink1_Root" href="http://www.cmbchina.com/cmbinfo">今日招行</a> &gt; <a id="content_NavigationLink1_parentPageInfo"></a> <a id="content_NavigationLink1_subParentPageInfo"></a> 招行新闻
+                <div id="NavigationLinkDiv" style=" height:28px; border:1px solid #cccccc;background-color:#F1F1F1; line-height:28px; color:#696969" th:switch="${type}">
+                    &nbsp; &nbsp;当前位置：&nbsp;
+                    <a id="content_NavigationLink1_main" href="http://www.cmbchina.com/">招商银行</a>  &gt;
+                    <a id="content_NavigationLink1_parentPageInfo"></a>
+                    <a  th:case="'zhxw'"></a> 招行新闻
+                    <a  th:case="'zygg'"></a> 重要公告
+                    <a  th:case="'lyfk'"></a> 留言反馈
                 </div>
             </div>
 
@@ -543,16 +512,16 @@
                     <ul class="Slides" id="Slides" style="height: 130px;">
 
                         <li style="width: 721px; height: 130px;"><a href="http://www.cmbchina.com/cmbinfo/news/newsinfo.aspx?guid=3a2180ba-1ebb-4db6-9bc1-e0426cb70873" target="_blank" cname="主广告位--cmbinfoadv" oname="财富500强" otype="图片链接">
-                            <img title="财富500强" style="width: 720px; height: 130px; display: none; opacity: -0.01;" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/e869d7d9-8821-43b2-b624-f9fb22125270.jpg"></a>
+                            <img title="财富500强" style="width: 720px; height: 130px; display: none; opacity: -0.01;" th:src="@{../images/e869d7d9-8821-43b2-b624-f9fb22125270.jpg}"></a>
                         </li>
 
                         <li style="width: 721px; height: 130px;"><a href="http://www.cmbchina.com/cmbinfo/news/newsinfo.aspx?guid=87237174-c657-434c-9417-dd34cd025f80#" target="_self" cname="主广告位--cmbinfoadv" oname="全球银行品牌价值500强-第九位" otype="图片链接">
-                            <img title="全球银行品牌价值500强-第九位" style="width: 720px; height: 130px; display: block; opacity: 0.95;" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/cea98476-5419-47bc-ab86-571297a935db.jpg"></a>
+                            <img title="全球银行品牌价值500强-第九位" style="width: 720px; height: 130px; display: block; opacity: 0.95;" th:src="@{../images/cea98476-5419-47bc-ab86-571297a935db.jpg}"></a>
                         </li>
 
                         <li style="width: 721px; height: 130px;"><a href="http://www.cmbchina.com/cmbinfo/news/newsinfo.aspx?guid=b85b2f9e-b477-4646-bdef-04f5e91fe90e" target="_blank" cname="主广告位--cmbinfoadv" oname="全球银行1000强-第17位" otype="图片链接">
                             <img title="全球银行1000强-第17位" style="width: 720px;
-                            height: 130px;" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/afd7fb02-16d0-4292-94ae-3eec5e04837c.jpg"></a>
+                            height: 130px;" th:src="@{../images/afd7fb02-16d0-4292-94ae-3eec5e04837c.jpg}"></a>
                         </li>
 
                     </ul>
@@ -569,7 +538,7 @@
                 </div>
             </div>
 
-            <script src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/YUI.js.下载" type="text/javascript"></script>
+            <script th:src="@{../Scripts/YUI.js}" type="text/javascript"></script>
 
             <script type="text/javascript">
                 function Each(list, fun) {
@@ -594,17 +563,11 @@
 
             <div id="column_content">
                 <div class="c_header">
-                    <span>招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾</span></div>
+                    <span th:text="${object.bt}"></span></div>
                 <div class="c_content">
                     <div class="infodiv">
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span lang="EN-US" style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">3</span><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">月<span lang="EN-US">22</span>日上午，招商银行董事长缪建民亮相<span lang="EN-US">2020</span>年度业绩发布会，首次向公众投资者畅谈招商银行战略思路。缪建民曾任人保集团董事长，去年<span lang="EN-US">9</span>月接替李建红成为招行董事长，是业内公认的“学者型高管”。<span lang="EN-US"><!--?xml:namespace prefix = "o" ns = "urn:schemas-microsoft-com:office:office" /--><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">缪建民称，“一家企业的成功首先是战略的成功，招商银行的领先首先是战略的领先。”成立<span lang="EN-US">34</span>年来，招行一直有非常清晰的战略，以“创新驱动、零售领先、特色鲜明的中国最佳商业银行”为战略愿景，以“轻型银行”为战略方向，以“一体两翼”为战略定位，经实践证明是正确的，招行也被市场冠以“零售之王”美誉。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">他表示，招行要一张蓝图绘到底，坚持战略不动摇，“不折腾”。具体而言就是坚持“三个不变”，即“董事会领导下的行长负责制不变、市场化的体制机制不变、干部队伍的稳定性不变”。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">他表示，当前招行应结合自身优势和外部环境变化，加强三方面能力建设，即财富管理、金融科技和风险管理。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">“财富管理能力决定我们能走多高。”缪建民说，从中长期看，<a name="_GoBack"></a>银行净利、息差有收窄的趋势，金融脱媒也在加快；同时，中国的财富管理仍处爆发式增长阶段，规模庞大的中等收入阶层、相对发达国家较低的证券化率，决定了财富管理业务有巨大的机会——财富管理业务的资本消耗少，恰恰与招行轻型银行的战略方向契合。<span lang="EN-US">2020</span>年度报告中，招行正式提出把“大财富管理”作为“十四五”期间的工作主线。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">金融科技也是招行多年来一直深耕的领域，<span lang="EN-US">2017</span>年提出打造“金融科技银行”，<span lang="EN-US">2018</span>年起以手机<span lang="EN-US">App</span>的月活为“北极星指标”牵引全行转型，数字化经营有声有色。<span lang="EN-US">2020</span>年信息科技投入<span lang="EN-US">119.12</span>亿元，同比增长<span lang="EN-US">27.25%</span>，占营业收入的<span lang="EN-US">4.45%</span>。“我们在同行业中走在前面，但是要有更高的目标，对标金融科技的头部企业。”缪建民说，要把金融科技打造成招商银行除负债成本外的另一个“护城河”。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">风险管理决定招行能走多远。缪建民表示，尽管招行整体风险管理能力较强，但在新的发展阶段面临新的挑战，仍需不断提升。<span lang="EN-US"><o:p></o:p></span></span></p>
-                        <p class="MsoNormal" style="LAYOUT-GRID-MODE: char; MARGIN: 0cm 0cm 0pt; LINE-HEIGHT: 200%; TEXT-INDENT: 18pt; mso-char-indent-count: 2.0; mso-layout-grid-align: none"><span style="FONT-SIZE: 9pt; FONT-FAMILY: 宋体; LINE-HEIGHT: 200%; mso-bidi-font-family: 宋体">招商银行行长田惠宇在业绩发布会上作了补充论述。他认为在“大财富管理”框架下，招行的风险管理能力要涵盖资产组织、产品创设、产品配置、合作伙伴选择、投资者教育、投资者陪伴、投后管理等环节，超出传统商业银行的信用风险管理的范畴。“这是我们的难点和痛点，需要未来五年甚至更长时间的努力。”</span></p></div>
+                        <p th:text="${object.zw}"></p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -651,7 +614,7 @@
         <tbody><tr>
             <td width="15%" style="text-align: center" rowspan="2" valign="top">
                 <br>
-                <img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/2-dbarcode.png" border="0" alt="手机一网通二维码"><br>
+                <img th:src="@{../images/2-dbarcode.png}" border="0" alt="手机一网通二维码"><br>
                 <div style="font-size: 12px; font-weight: bold; height: 25px; line-height: 15px;
                 margin-top: 10px;">
                     手机一网通<br>
@@ -717,25 +680,25 @@
                     <tbody><tr>
                         <td align="center">
                             <a target="_blank" href="http://szcert.ebs.org.cn/418b33e0-18a9-4206-bb61-1c201322a400">
-                                <img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/gongshang.jpg" border="0" alt="工商网监标志"></a>
+                                <img th:src="@{../images/gongshang.jpg}" border="0" alt="工商网监标志"></a>
                         </td>
                         <td width="15">
                         </td>
                         <td align="center">
                             <a target="_blank" href="http://www.cmbchina.com/webpages/cmbsafe/index.htm">
-                                <img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/wangan.gif" border="0" alt="网络安全标志"></a>
+                                <img th:src="@{../images/wangan.gif}" border="0" alt="网络安全标志"></a>
                         </td>
                         <td width="15">
                         </td>
                         <td align="center">
                             <a href="http://www.sznet110.gov.cn/netalarm/index.jsp" target="_blank">
-                                <img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/sz_police.gif" border="0" alt="网络安全标志"></a>
+                                <img th:src="@{../images/sz_police.gif}" border="0" alt="网络安全标志"></a>
                         </td>
                         <td align="center">
-                            <a id="___szfw_logo___" href="https://search.szfw.org/cert/l/CX20120110001800001833" target="_blank"><img src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/chengxinlogo.png" border="0" alt="诚信网站"></a>
+                            <a id="___szfw_logo___" href="https://search.szfw.org/cert/l/CX20120110001800001833" target="_blank"><img th:src="@{../images/chengxinlogo.png}" border="0" alt="诚信网站"></a>
                         </td>
                         <td><a href="https://ss.knet.cn/verifyseal.dll?sn=e13073144030041836wa7c000000&amp;ct=df&amp;a=1&amp;pa=500267" tabindex="-1" id="urlknet" target="_blank">
-                            <img alt="可信网站" name="CNNIC_seal" border="true" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/knetseallogo.png" oncontextmenu="return false;" onclick="CNNIC_change(&#39;urlknet&#39;)"></a></td>
+                            <img alt="可信网站" name="CNNIC_seal" border="true" th:src="@{../images/knetseallogo.png}" oncontextmenu="return false;" onclick="CNNIC_change(&#39;urlknet&#39;)"></a></td>
                         <td align="center" class="FooterGray">
                             招商银行一网通 创建于一九九七年
                             <br>
@@ -794,7 +757,7 @@
         }
     </script>
 
-    <script language="javascript" src="./招行董事长缪建民亮相业绩发布会：坚持战略方向不折腾 -- 招商银行官网_files/sdc_web.js.下载" type="text/javascript"></script>
+    <script language="javascript" th:src="@{../scriipts/sdc_web.js}" type="text/javascript"></script>
 
 
 </form>
