--- a/src/main/resources/templates/logins.html
+++ b/src/main/resources/templates/logins.html
@@ -1,22 +1,42 @@
-<!DOCTYPE html>
-<html xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<!doctype html>
+<html  class="x-admin-sm">
 <head>
-    <meta charset="UTF-8">
-    <title>登录</title>
-    <link rel="stylesheet" href="css/login.css" type="text/css">
+	<meta charset="UTF-8">
+	<title>后台登录</title>
+	<meta name="renderer" content="webkit|ie-comp|ie-stand">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/login.css">
+	  <link rel="stylesheet" href="./css/xadmin.css">
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./lib/layui/layui.js" charset="utf-8"></script>
+    <!--[if lt IE 9]>
+      <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
+      <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-<body>
-<form class="login-page" action="/login" method="post">
-    <div class="form">
-        <h3>账户登录</h3>
-        <input type="text" placeholder="用户名" name="username" required="required" />
-        <input type="password" placeholder="密码" name="password" required="required" />
-        <span style="display: inline">
+<body class="login-bg">
+    
+    <div class="login layui-anim layui-anim-up">
+        <div class="message">招商银行后台管理登录</div>
+        <div id="darkbannerwrap"></div>
+        
+        <form method="post" class="layui-form" action="/login">
+            <input name="username" placeholder="用户名"  type="text" lay-verify="required" class="layui-input" >
+            <hr class="hr15">
+            <input name="password" lay-verify="required" placeholder="密码"  type="password" class="layui-input">
+            <hr class="hr15">
+            <span style="display: inline">
             <input type="text" name="imageCode" placeholder="验证码" style="width: 50%;"/>
             <img src="/code/image"/>
-        </span>
-        <button type="submit">登录</button>
+            </span>
+            <hr class="hr20" >
+            <input value="登录" lay-submit lay-filter="login" style="width:100%;" type="submit">
+            <hr class="hr20" >
+        </form>
     </div>
-</form>
+
 </body>
 </html>
