--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -26,6 +26,28 @@
         <div class="layui-fluid">
 
             <div class="layui-row" th:switch="${type}" th:if="${sign=='edit'}">
+
+                <!--                用户表单-->
+                <form class="layui-form" th:case="'yhtj'">
+                    <input name="id" type="hidden" th:value="${object.id}">
+                    <div class="layui-form-item">
+                        <label for="username" class="layui-form-label">
+                            <span class="x-red">*</span>用户名
+                        </label>
+                        <div class="layui-input-inline">
+                            <input th:value="${object.username}" type="text" id="username" name="username" required="" lay-verify="required"
+                                   autocomplete="off" class="layui-input">
+                        </div>
+                        <div class="layui-form-mid layui-word-aux">
+                            <span class="x-red">*</span>用户名
+                        </div>
+                    </div>
+                    <div class="layui-form-item">
+                        <button  class="layui-btn" lay-filter="add" lay-submit="">
+                            增加
+                        </button>
+                    </div>
+                </form>
                 <!--                特别推介表单-->
                 <form class="layui-form" th:case="'tbtj'">
                     <input name="id" type="hidden" th:value="${object.id}">
@@ -174,29 +196,55 @@
                 </form>
                 <!--                招行新闻表单-->
                 <form class="layui-form" th:case="'zhxw'">
-                    <input name="id" type="hidden" th:value="${object.id}">
+                <input name="id" type="hidden" th:value="${object.id}">
+                <div class="layui-form-item">
+                    <label for="zhxwbt" class="layui-form-label">
+                        <span class="x-red">*</span>标题
+                    </label>
+                    <div class="layui-input-inline">
+                        <input type="text" th:value="${object.bt}" id="zhxwbt" name="bt" required="" lay-verify="required"
+                               autocomplete="off" class="layui-input">
+                    </div>
+                    <div class="layui-form-mid layui-word-aux">
+                        <span class="x-red">*</span>招行新闻标题
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label for="zyggzw" class="layui-form-label">
+                        <span class="x-red">*</span>正文内容
+                    </label>
+                    <div class="layui-input-inline">
+                            <textarea th:value="${object.zw}" id="zhxwzw" name="zw" required="" lay-verify="required"
+                                      autocomplete="off" class="layui-textarea"></textarea>
+                    </div>
+                    <div class="layui-form-mid layui-word-aux">
+                        <span class="x-red">*</span>招行新闻正文内容
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <button  class="layui-btn" lay-filter="add" lay-submit="">
+                        增加
+                    </button>
+                </div>
+            </form>
+            </div>
+
+            <div class="layui-row" th:switch="${type}" th:if="${sign=='add'}">
+
+                <!--                用户表单-->
+                <form class="layui-form" th:case="'yhtj'">
+<!--                    <input name="id" type="hidden" th:value="${ywkey}">-->
+<!--                    <input name="password" type="hidden" value="111">-->
                     <div class="layui-form-item">
-                        <label for="zhxwbt" class="layui-form-label">
-                            <span class="x-red">*</span>标题
+                        <label for="username" class="layui-form-label">
+                            <span class="x-red">*</span>用户名
                         </label>
                         <div class="layui-input-inline">
-                            <input type="text" th:value="${object.bt}" id="zhxwbt" name="bt" required="" lay-verify="required"
+                            <input type="text" id="username" name="username" required="" lay-verify="required"
                                    autocomplete="off" class="layui-input">
                         </div>
                         <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>招行新闻标题
-                        </div>
-                    </div>
-                    <div class="layui-form-item">
-                        <label for="zyggzw" class="layui-form-label">
-                            <span class="x-red">*</span>正文内容
-                        </label>
-                        <div class="layui-input-inline">
-                            <textarea th:value="${object.zw}" id="zhxwzw" name="zw" required="" lay-verify="required"
-                                      autocomplete="off" class="layui-textarea"></textarea>
-                        </div>
-                        <div class="layui-form-mid layui-word-aux">
-                            <span class="x-red">*</span>招行新闻正文内容
+                            <span class="x-red">*</span>用户名
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -205,9 +253,6 @@
                         </button>
                     </div>
                 </form>
-            </div>
-
-            <div class="layui-row" th:switch="${type}" th:if="${sign=='add'}">
                 <!--                特别推介表单-->
                 <form class="layui-form" th:case="'tbtj'">
                     <input name="id" type="hidden" th:value="${ywkey}">
