--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,6 +78,24 @@
                 <ul id="nav">
                     <li>
                         <a href="javascript:;">
+                            <i class="iconfont left-nav-li" lay-tips="用户管理">&#xe6b8;</i>
+                            <cite>用户管理</cite>
+                            <i class="iconfont nav_right">&#xe697;</i></a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a onclick="xadmin.add_tab('用户添加','/xxlr?type=yhtj')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>添加用户</cite></a>
+                            </li>
+<!--                            <li>-->
+<!--                                <a onclick="xadmin.add_tab('特别推介信息查看','/getList?type=yhtj')">-->
+<!--                                    <i class="iconfont">&#xe6a7;</i>-->
+<!--                                    <cite>查看</cite></a>-->
+<!--                            </li>-->
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="特别推介管理">&#xe6b8;</i>
                             <cite>特别推介管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
